--- a/cs1810final/styles.css
+++ b/cs1810final/styles.css
@@ -1,3 +1,16 @@
 * {
     font-family: sans-serif;
 }
+h1 {
+    background-color: lightgreen;
+}
+@media (min-width: 700px){
+    h1 {
+        background-color: lightskyblue;
+    }
+}
+@media (min-width: 1000px) {
+    h1 {
+        background-color: lightpink;
+    }
+}
