--- a/cs1810final/styles.css
+++ b/cs1810final/styles.css
@@ -1,6 +1,3 @@
-/* * {
-    font-family: sans-serif;
-} */
 h1 {
     text-align: center;
     font-family: 'Julius Sans One';
@@ -12,9 +9,6 @@ header {
 figcaption {
     color: grey;
     font-size: x-small;
-}
-#quote {
-    text-align: center;
 }
 #logo {
     color: rgb(232, 128, 0);
@@ -38,9 +32,27 @@ figcaption {
 #navWrapper button:hover {
     text-decoration: underline;
 }
+body {
+    background-image: url('Jupiter-A-Mind-of-Limits-cropped-top.jpg');
+    background-color: #cccccc;
+    background-size: auto;
+}
+#mainPageImage {
+    height: 500px;
+}
+#quote {
+    color: whitesmoke;
+    font-family: 'Jura', sans-serif;
+    position: absolute;
+    top: 60%;
+    left: 10%;
+}
 #postLink {
     text-decoration: none;
     color: black;
+}
+#recentPostsWrapper {
+    background-color: white;
 }
 #recentPostsHeader, #tagsHeader {
     text-align: center;
@@ -74,6 +86,7 @@ figcaption {
     font-family: 'Source Code Pro', monospace;
 }
 #emailListWrapper {
+    background-color: white;
     padding-bottom: 5%;
     padding-left: 5%;
 }
