--- a/cs1810final/styles.css
+++ b/cs1810final/styles.css
@@ -33,7 +33,7 @@ figcaption {
     text-decoration: underline;
 }
 body {
-    background-image: url('Jupiter-A-Mind-of-Limits-cropped-top.jpg');
+    background-image: url('Jupiter-A-Mind-of-Limits.jpg');
     background-color: #cccccc;
     background-size: auto;
 }
@@ -51,14 +51,11 @@ body {
     text-decoration: none;
     color: black;
 }
-#recentPostsWrapper {
-    background-color: white;
-}
-#recentPostsHeader, #tagsHeader {
+#recentPostsHeader, #tagsHeader, #emailListHeader{
     text-align: center;
     font-family: 'Julius Sans One', sans-serif;
     font-weight: bold;
-    font-size:large ;
+    font-size: large;
     letter-spacing: 10px;
 }
 #tagsWrapper {
@@ -66,6 +63,15 @@ body {
     text-align: center;
     padding-top: 5%;
     padding-bottom: 5%;
+    background-image: linear-gradient(45deg, #6955c395, #88203daa);
+    margin-top: -20px;
+    margin-bottom: -15px;
+}
+#recentPostsWrapper {
+    background-color: white;
+    margin-bottom: -15px;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 #recentPost1Wrapper {
     padding: 2%;
@@ -73,19 +79,28 @@ body {
     border-width: .5px;
     border-radius: 8px;
     width: 60%;
-    margin: 2%;
+    margin-left: 2%;
     background-color: white;
 }
 #recentPost1Wrapper:hover {
     background-color: rgba(211, 211, 211, 0.309);
 }
-#tagsWrapper {
-    background-color: rgb(125, 156, 211);
-}
 #tagsList {
-    font-family: 'Source Code Pro', monospace;
+    font-family: 'Hubballi', cursive;
+}
+#tagsList button {
+    color: black;
+    background-color: white;
+    /* font-weight: bold; */
+    border: none;
+    border-radius: 12px;
+    margin: 3px;
+}
+#tagsList button:hover {
+    background-color: whitesmoke;
 }
 #emailListWrapper {
+    margin-top: -20px;
     background-color: white;
     padding-bottom: 5%;
     padding-left: 5%;
@@ -96,6 +111,6 @@ body {
     padding-bottom: 5%;
 }
 footer {
-    background-color: rgb(6, 2, 33);
-    color: gray;
+    background-color: rgb(90, 90, 90);
+    color: rgb(209, 209, 209);
 }
