--- a/cs1810final/Post.css
+++ b/cs1810final/Post.css
@@ -1,3 +1,7 @@
+*{
+    padding-left: 3%;
+    padding-right: 3%;
+}
 #logo {
     color: rgb(232, 128, 0);
     font-family: 'Julius Sans One', sans-serif;
