--- a/cs1810final/styles.css
+++ b/cs1810final/styles.css
@@ -17,48 +17,27 @@ figcaption {
     font-weight: bolder;
     letter-spacing: 3px;
 }
-#navWrapper {
-    /* text-align: center; */
-    display: flex;
-    justify-content: center;
-    width: 100%;
+#recentPostTitle {
+    font-size: 1.5em;
 }
-
-/* -----------------------nav bar--------------------------------- */
-.listItem {
-    font-family: 'Julius Sans One', sans-serif;
-    background-color: inherit;
-    color: white;
-    border-style: none;
-    font-size: small;
-    letter-spacing: 1px;
-    display: flex;
-    flex-direction: column;
-    
-}
-#navWrapper .listItem:hover {
-    text-decoration: underline;
-}
-
 body {
     background-image: url('Jupiter-A-Mind-of-Limits.jpg');
     background-size: cover;
     background-position: center;
     background-color: #cccccc;
 }
-
 #mainPageImage {
-    height: 500px;
+    height: 150px;
 }
 #quote {
     color: whitesmoke;
-    background-color: black;
+    background-color: inherit;
     font-family: 'Jura', sans-serif;
     position: absolute;
     top: 60%;
     left: 10%;
 }
-@media (min-width=500px) {
+/* @media (min-width=500px) {
     body{
         background-position: left;
         background-size: contain;
@@ -71,7 +50,7 @@ body {
         top: 60%;
         left: 10%;
     }
-}
+} */
 #postLink {
     text-decoration: none;
     color: black;
@@ -139,12 +118,42 @@ footer {
     background-color: rgb(90, 90, 90);
     color: rgb(209, 209, 209);
 }
+/* -----------------------nav bar--------------------------------- */
+nav {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    min-height: 35px;
+    align-items: center;
+}
+.listItem {
+    font-family: 'Julius Sans One', sans-serif;
+    background-color: inherit;
+    color: white;
+    border-style: none;
+    font-size: small;
+    letter-spacing: 1px;
+}
+.listItem a{
+    color: white;
+}
+nav .listItem:hover {
+    text-decoration: underline;
+}
 @media (min-width: 500px) {
-    .listItem{
-        background-color: rgba(0, 0, 255, 0.342);
-        display: flex;
+    
+    nav{  
         flex-direction: row;
         justify-content: space-around;
-        width: 100%;
     } 
+    body {
+        background-size: cover;
+    }
+    #mainPageImage {
+        height: 300px;
+    }
+    #recentPostTitle {
+        font-size: 2em;
+    }
 }
