--- a/cs1810final/styles.css
+++ b/cs1810final/styles.css
@@ -55,13 +55,23 @@ body {
     text-decoration: none;
     color: black;
 }
-#recentPostsHeader, #tagsHeader, #emailListHeader{
+#tagsHeader, #emailListHeader{
     text-align: center;
     font-family: 'Julius Sans One', sans-serif;
     font-weight: bold;
     font-size: large;
     letter-spacing: 10px;
 }
+
+#recentPostsHeader {
+    text-align: center;
+    font-family: 'Julius Sans One', sans-serif;
+    font-weight: bold;
+    font-size: large;
+    letter-spacing: 10px;
+    background-color: white;
+}
+
 #tagsWrapper {
     color: white;
     text-align: center;
@@ -71,27 +81,52 @@ body {
     margin-top: -20px;
     margin-bottom: -15px;
 }
+
 #recentPostsWrapper {
     background-color: white;
     margin-bottom: -15px;
     padding-top: 2%;
     padding-bottom: 2%;
+    display: grid;
+    grid-template-columns: 100px 400px 400px 100px;
+    grid-template-rows: auto;
+    grid-gap: 10px;
 }
+
 #recentPost1Wrapper {
     padding: 2%;
     border: solid;
     border-width: .5px;
     border-radius: 8px;
-    width: 60%;
-    margin-left: 2%;
+    grid-column: 2/3;
+    width: 400px;
+    /* margin-left: 2%; */
+    /* background-color: white; */
+}
+
+#recentPost2Wrapper {
+    padding: 2%;
+    border: solid;
+    border-width: .5px;
+    border-radius: 8px;
+    width: 400px;
+    grid-column: 3/4;
+    /* margin-left: 2%;  */
     background-color: white;
 }
+
+.side {
+    grid-area: S;
+}
+
 #recentPost1Wrapper:hover {
     background-color: rgba(211, 211, 211, 0.309);
 }
+
 #tagsList {
     font-family: 'Hubballi', cursive;
 }
+
 #tagsList button {
     color: black;
     background-color: white;
@@ -107,7 +142,8 @@ body {
     margin-top: -20px;
     background-color: white;
     padding-bottom: 5%;
-    padding-left: 5%;
+    padding-top: 5%;
+    /* padding-left: 5%; */
 }
 #footerTextWrapper {
     padding-left: 5%;
