--- a/cs1810final/Gallery.css
+++ b/cs1810final/Gallery.css
@@ -49,7 +49,6 @@ nav {
     background-color: inherit;
     color: white;
     border-style: none;
-    font-size: small;
     letter-spacing: 1px;
 }
 
@@ -95,17 +94,18 @@ nav .listItem:hover {
     width: 400px;
     grid-column-start: 1;
     grid-column-end: 2;
-    border-radius: 10%;
+    border-radius: 8%;
 }
 
 #img2 {
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 2/3;
-    border-radius: 10%;
+    border-radius: 8%;
 }
 
 #img3 {
-    width: 800px
+    width: 800px;
+    border-radius: 4%;
 }
 
