--- a/cs1810final/styles.css
+++ b/cs1810final/styles.css
@@ -60,7 +60,7 @@ body {
     text-align: center;
     font-family: 'Julius Sans One', sans-serif;
     font-weight: bold;
-    font-size: large;
+    font-size: 2em;
     letter-spacing: 10px;
 }
 
@@ -86,6 +86,7 @@ body {
     margin-bottom: -15px;
 }
 
+/* full scale version of grid on recent posts section */
 #recentPostsWrapper {
     background-color: white;
     margin-bottom: -15px;
@@ -106,6 +107,7 @@ body {
     border-radius: 8px;
     grid-column: 2/3;
     width: 400px;
+    height: fit-content;
 }
 
 #recentPost2Wrapper {
@@ -117,13 +119,13 @@ body {
     border-radius: 8px;
     width: 100%;
     grid-column: 3/4;
-    /* margin-left: 2%;  */
     background-color: white;
 }
 
 #recentPost1Wrapper:hover {
     background-color: rgba(211, 211, 211, 0.309);
 }
+
 #recentPost2Wrapper:hover {
     background-color: rgba(211, 211, 211, 0.309);
 }
@@ -140,16 +142,19 @@ body {
     border-radius: 12px;
     margin: 3px;
 }
+
 #tagsList button:hover {
     background-color: whitesmoke;
 }
+
 #emailListWrapper {
     margin-top: -20px;
     background-color: white;
     padding-bottom: 5%;
     padding-top: 5%;
-    /* padding-left: 5%; */
+    padding-left: 5%;
 }
+
 #footerTextWrapper {
     padding-left: 5%;
     padding-top: 5%;
@@ -159,6 +164,7 @@ footer {
     background-color: rgb(90, 90, 90);
     color: rgb(209, 209, 209);
 }
+
 /* -----------------------nav bar--------------------------------- */
 nav {
     display: flex;
@@ -169,6 +175,7 @@ nav {
     font-size: 20px;
     align-items: center;
 }
+
 .listItem {
     font-family: 'Julius Sans One', sans-serif;
     background-color: inherit;
@@ -176,12 +183,15 @@ nav {
     border-style: none;
     letter-spacing: 1px;
 }
+
 .listItem a{
     color: white;
 }
+
 nav .listItem:hover {
     text-decoration: underline;
 }
+
 @media (min-width: 500px) {
     
     nav{  
