--- a/cs1810final/AllPosts.css
+++ b/cs1810final/AllPosts.css
@@ -12,7 +12,7 @@ figcaption {
 }
 #logo {
     color: rgb(232, 128, 0);
-    background-color: black;
+    background-color: inherit;
     font-family: 'Julius Sans One', sans-serif;
     text-decoration: none;
     font-weight: bolder;
@@ -73,13 +73,13 @@ nav {
 .listItem {
     font-family: 'Julius Sans One', sans-serif;
     background-color: inherit;
-    color: white;
+    color: black;
     border-style: none;
     letter-spacing: 1px;
 }
 
 .listItem a{
-    color: white;
+    color: black;
 }
 
 nav .listItem:hover {
