Can't get stupid flex box to work!! >:(

--- a/cs1810final/Gallery.css
+++ b/cs1810final/Gallery.css
@@ -60,6 +60,38 @@ nav .listItem:hover {
     text-decoration: underline;
 }
 
+#imageContainer {
+    padding-left: 8%;
+    width: 400px;
+    /* width: 80%; */
+    display: flex;
+    flex-wrap: wrap;
+    /* grid-gap: 10px;
+    grid-template-columns: 400px;
+    grid-template-rows: auto;
+    justify-content: center; */
+}
+
+#img1{
+    flex: 1 1 auto;
+    /* grid-column-start: 1;
+    grid-column-end: 2; */
+    border-radius: 8%;
+}
+
+#img2 {
+    /* grid-column-start: 2; */
+    /* grid-column-end: 3;
+    grid-row-start: 2/3; */
+    flex: 1 1 auto;
+    border-radius: 8%;
+}
+
+#img3 {
+    flex: 1 1 auto;
+    border-radius: 4%;
+} 
+
 @media (min-width: 500px) {
 
     nav {
@@ -78,34 +110,34 @@ nav .listItem:hover {
     #recentPostTitle {
         font-size: 2em;
     }
-}
-
-#imageContainer {
-    padding-left: 8%;
-    width: 80%;
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: 400px 400px 400px;
-    grid-template-rows: auto;
-    justify-content: center;
-}
-
-#img1{
-    width: 400px;
-    grid-column-start: 1;
-    grid-column-end: 2;
-    border-radius: 8%;
-}
-
-#img2 {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 2/3;
-    border-radius: 8%;
-}
-
-#img3 {
-    width: 800px;
-    border-radius: 4%;
+    
+    #imageContainer {
+        padding-left: 8%;
+        width: 80%;
+        display: grid;
+        grid-gap: 10px;
+        grid-template-columns: 400px 400px 400px;
+        grid-template-rows: auto;
+        justify-content: center;
+    }
+    
+    #img1{
+        width: 400px;
+        grid-column-start: 1;
+        grid-column-end: 2;
+        border-radius: 8%;
+    }
+    
+    #img2 {
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 2/3;
+        border-radius: 8%;
+    }
+    
+    #img3 {
+        width: 800px;
+        border-radius: 4%;
+    }
 }
 
